# Midi

Piano/: README.md  build.gradle  gradle.properties  settings.gradle
Piano/app/: build.gradle  google-services.json
Piano/app/src/androidTest/java/com/kalasoft/digibandpiano/: ExampleInstrumentedTest.java
Piano/app/src/main/: AndroidManifest.xml  AppStudy  Readme.md  Sched
Piano/app/src/main/assets/: privacypolicy.html
Piano/app/src/main/assets/music/midi/: chitti.mid  infatuation.mid  jala.mid  zara.mid
Piano/app/src/main/assets/shaders/pianoShaders/: alphablock.frag  alphablock.vert  fragmentShader.glsl  gradient.frag  gradient.vert  keysandnotes.frag  keysandnotes.vert  keystexturedandnotes.frag  keystexturedandnotes.vert  rect.frag  rect.vert  texture.frag  texture.vert  vertexShader.glsl
Piano/app/src/main/assets/shaders/pianoShaders/checklistshader/: checklistshader
Piano/app/src/main/java/com/kalasoft/Midi/: IMidiDeviceListener.java  KMidiReceiver.java  KSMidiDeviceInfo.java  KSMidiPort.java  MidiEngine.java  ZNativeMidiEngine.java
Piano/app/src/main/java/com/kalasoft/digibandpiano/: MainActivity.java  MenuActivity.java  Privacy.java
Piano/app/src/main/jni/: AMain.cpp  CMakeLists.txt  CheckList  PianoApplication.cpp  PianoApplication.h  PianoController.cpp  PianoController.h
Piano/app/src/main/jni/Audio/: AudioInterface.h  AudioSamples.cpp  AudioSamples.h  CMakeLists.txt  Mixer.cpp  Mixer.h  OboeAudioRenderNode.cpp  OboeAudioRenderNode.h  Readme.md  SLESAudioPlayer.cpp  SLESAudioPlayer.h
Piano/app/src/main/jni/Codec/: WavDecoder.cpp  WavDecoder.h
Piano/app/src/main/jni/GN/: IMediaNode.h  MediaEvent.h
Piano/app/src/main/jni/Midi/: MidiEvent.cpp  MidiFile.cpp  MidiPlayer.cpp  MidiPlayer.h
Piano/app/src/main/jni/Music/: CMakeLists.txt  SoundBank.cpp  SoundBank.h
Piano/app/src/main/jni/Piano/: CMakeLists.txt  IPianoController.h  IPianoSettingsControl.cpp  IPianoSettingsControl.h  Notes  PianoCore.h  PianoState.cpp  PianoState.h  PianoSynthNode.cpp  PianoSynthNode.h
Piano/app/src/main/jni/PianoOldCode/: CMakeLists.txt  audiomanager.cpp  audiomanager.h  commons.h  filemanager.cpp  filemanager.h  firebase.cpp  firebase.h  glSetup.cpp  glSetup.h  helperfuncs.cpp  helperfuncs.h  inputoutput.cpp  inputoutput.h  javacalls.cpp  javacalls.h  main.h  mainSequencer.cpp  piano.cpp  piano.h  pixamap.h  shaders.h  shapes.cpp  shapes.h  text.cpp  text.h  ui.cpp  ui.h
Piano/app/src/main/jni/Text/: CMakeLists.txt  Text.cpp  Text.h
Piano/app/src/main/jni/UI/: IPianoView.h  PianoSettingsView.cpp  PianoSettingsView.h  PianoView.cpp  PianoView.h  RainbowPianoTouchListener.cpp  RainbowPianoTouchListener.h  RainbowPianoView.cpp  RainbowPianoView.h
Piano/app/src/main/res/layout/: activity_menu.xml
Piano/app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
Piano/app/src/main/res/values-night/: themes.xml
Piano/app/src/test/java/com/kalasoft/digibandpiano/: ExampleUnitTest.java
Piano/gradle/wrapper/: gradle-wrapper.properties
